# serializer version: 1
# name: TestBacktest.test_btcusdt
  '7945b459b9359ce25085af58962bbc2edd22e0dc6b13dcc40e3295385183f106'
# ---
# name: TestBacktest.test_btcusdt.1
  'd8fd97da4b8d357c8f05dcf4602ecb627573afd2310191bb52913e46fdbc6a24'
# ---
# name: TestBacktest.test_closed_only
  '7945b459b9359ce25085af58962bbc2edd22e0dc6b13dcc40e3295385183f106'
# ---
# name: TestBacktest.test_closed_only.1
  'd8fd97da4b8d357c8f05dcf4602ecb627573afd2310191bb52913e46fdbc6a24'
# ---
# name: TestBacktest.test_limit_order
  'cc6020614d6d8dd9dae66ba3cc29c9cfa300dafe0eb064a0044c233bca088b3c'
# ---
# name: TestBacktest.test_limit_order.1
  'e4a2b46e751f71db8111855f37cff7af949ac22a74863bfa76bac842d6242174'
# ---
# name: TestBacktest.test_limit_order.2
  '6aed53345166e634f2ed33e99c9a285f791d09f32200dcf8430a9f041edac9c9'
# ---
# name: TestBacktest.test_limit_order.3
  '57628918aa341821f4b203e1ebc25997c1ce2e21d3cdc79a320abe326a3947e9'
# ---
# name: TestBacktest.test_msft
  '489cff03da4e238cd18e45781eadae65f7437b284d81b7eb50f772ce230a95e7'
# ---
# name: TestBacktest.test_msft.1
  '2ed5875faf780ea4e99640c99ad166820c82a756dabcaffe786cd153c5ea6670'
# ---
# name: TestBacktest.test_optimize
  '3f647f4a7497f81915136d138d9eb22d32686b74c136f29a5f4798d7205be5d8'
# ---
# name: TestBacktest.test_optimize.1
  '7945b459b9359ce25085af58962bbc2edd22e0dc6b13dcc40e3295385183f106'
# ---
# name: TestBacktest.test_optimize.2
  '87fbfb1d2c40ca1ac8a0a8429aa774cee241b84f02e57332258fbf75500e45a2'
# ---
